[gd_scene load_steps=2 format=3 uid="uid://b3k4j7h8n2qwx"]

[ext_resource type="Script" path="res://scripts/house_options_menu.gd" id="1_options"]

[node name="HouseOptionsMenu" type="Control"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -100.0
offset_top = -80.0
offset_right = 100.0
offset_bottom = 80.0
script = ExtResource("1_options")

[node name="Background" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color(0.2, 0.2, 0.3, 0.9)

[node name="Border" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color(0.8, 0.8, 0.8, 1)
mouse_filter = 2

[node name="InnerArea" type="ColorRect" parent="Border"]
anchor_left = 0.05
anchor_top = 0.05
anchor_right = 0.95
anchor_bottom = 0.95
color = Color(0.3, 0.3, 0.4, 1)
mouse_filter = 2

[node name="VBoxContainer" type="VBoxContainer" parent="InnerArea"]
anchor_left = 0.1
anchor_top = 0.1
anchor_right = 0.9
anchor_bottom = 0.9
theme_override_constants/separation = 10

[node name="Title" type="Label" parent="InnerArea/VBoxContainer"]
text = "House Options"
theme_override_font_sizes/font_size = 18
horizontal_alignment = 1

[node name="InventoryButton" type="Button" parent="InnerArea/VBoxContainer"]
custom_minimum_size = Vector2(0, 30)
text = "Inventory"
theme_override_font_sizes/font_size = 14

[node name="RestButton" type="Button" parent="InnerArea/VBoxContainer"]
custom_minimum_size = Vector2(0, 30)
text = "Rest"
theme_override_font_sizes/font_size = 14

[node name="StoreButton" type="Button" parent="InnerArea/VBoxContainer"]
custom_minimum_size = Vector2(0, 30)
text = "Store Items"
theme_override_font_sizes/font_size = 14

[node name="CloseButton" type="Button" parent="InnerArea/VBoxContainer"]
custom_minimum_size = Vector2(0, 30)
text = "Close"
theme_override_font_sizes/font_size = 14

[connection signal="pressed" from="InnerArea/VBoxContainer/InventoryButton" to="." method="_on_inventory_button_pressed"]
[connection signal="pressed" from="InnerArea/VBoxContainer/RestButton" to="." method="_on_rest_button_pressed"]
[connection signal="pressed" from="InnerArea/VBoxContainer/StoreButton" to="." method="_on_store_button_pressed"]
[connection signal="pressed" from="InnerArea/VBoxContainer/CloseButton" to="." method="_on_close_button_pressed"]